--- a/src/main/resources/segGroupCW/css/settings.css
+++ b/src/main/resources/segGroupCW/css/settings.css
@@ -1,9 +1,12 @@
 .title-text{
     -fx-font-size: 2em;
+    -fx-text-fill: #5988FF;
 }
 .radio-button{
     -fx-padding: 10px;
 }
 .btn-submit{
     -fx-padding: 10px;
+    -fx-text-fill: white;
 }
+
