--- a/src/main/resources/segGroupCW/dashboard.fxml
+++ b/src/main/resources/segGroupCW/dashboard.fxml
@@ -8,6 +8,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
+<?import javafx.scene.shape.SVGPath?>
+<?import com.jfoenix.svg.SVGGlyph?>
 <BorderPane stylesheets="@css/dashboard.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="segGroupCW.DashboardController">
 
    <top>
@@ -16,13 +18,7 @@
             <Pane prefHeight="99.0" prefWidth="156.0">
                <children>
                   <JFXButton fx:id="settingsButton" layoutX="78.0" layoutY="6.0" mnemonicParsing="false" onAction="#settingsPage" prefHeight="42.0" prefWidth="57.0" text=" ">
-                     <graphic>
-                        <ImageView fx:id="houseImageView1" fitHeight="39.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@/assets/app-22-cog-512.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+
                   </JFXButton>
                   <Separator layoutY="85.0" prefHeight="3.0" prefWidth="802.0" />
                </children></Pane>
