--- a/src/main/resources/segGroupCW/dashboard.fxml
+++ b/src/main/resources/segGroupCW/dashboard.fxml
@@ -36,7 +36,7 @@
 
 
    <left>
-      <VBox fx:id="leftVBox" alignment="TOP_CENTER" spacing="20.0">
+      <VBox fx:id="leftVBox" alignment="TOP_CENTER" scaleShape="false" spacing="20.0">
          <padding>
             <Insets bottom="30.0" left="10.0" right="10.0" top="10.0" />
          </padding>
