--- a/src/main/resources/segGroupCW/css/themes/default.css
+++ b/src/main/resources/segGroupCW/css/themes/default.css
@@ -10,7 +10,8 @@
     -fx-background-color: -main-bg-color;
     -fx-font-size: 12px;
     -fx-text-fill: -text-secondary;
-    -label: #5988FF
+    -label: #5988FF;
+    -icons: black;
 }
 
 .primary{
