--- a/src/main/resources/segGroupCW/dashboard.fxml
+++ b/src/main/resources/segGroupCW/dashboard.fxml
@@ -1,26 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.chart.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXCheckBox?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<?import javafx.scene.shape.SVGPath?>
-<?import com.jfoenix.svg.SVGGlyph?>
-<BorderPane stylesheets="@css/dashboard.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="segGroupCW.DashboardController">
+<BorderPane stylesheets="@css/dashboard.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="segGroupCW.DashboardController">
 
    <top>
       <HBox alignment="CENTER_LEFT" styleClass="HBox">
          <children>
-            <Pane prefHeight="99.0" prefWidth="156.0">
+            <Pane fx:id="topPane" prefHeight="99.0" prefWidth="156.0">
                <children>
-                  <JFXButton fx:id="settingsButton" layoutX="78.0" layoutY="6.0" mnemonicParsing="false" onAction="#settingsPage" prefHeight="42.0" prefWidth="57.0" text=" ">
-
+                  <JFXButton fx:id="settingsButton" layoutX="85.0" layoutY="14.0" mnemonicParsing="false" onAction="#settingsPage" prefHeight="42.0" prefWidth="57.0" text=" ">
                   </JFXButton>
                   <Separator layoutY="85.0" prefHeight="3.0" prefWidth="802.0" />
+                  <JFXButton fx:id="homeButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToSecondary" prefHeight="42.0" prefWidth="57.0" text=" " />
                </children></Pane>
             <Pane prefHeight="100.0">
                <children>
@@ -167,12 +175,6 @@
                                        </font>
                                     </Label>
                                     <JFXButton fx:id="bounceDefinitionButton" layoutX="122.0" layoutY="-1.0" mnemonicParsing="false" onAction="#bounceChange" prefHeight="19.0" prefWidth="36.0" style="-fx-background-color: #ff00;" textFill="TRANSPARENT">
-                                       <graphic>
-                                          <ImageView fx:id="pencilButton" fitHeight="35.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@/assets/School_Study_Student_Education_Pencil-512.png" />
-                                             </image></ImageView>
-                                       </graphic>
                                     </JFXButton>
                                  </children>
                               </Pane>
