--- a/src/main/resources/segGroupCW/fileUpload.fxml
+++ b/src/main/resources/segGroupCW/fileUpload.fxml
@@ -15,7 +15,7 @@
       <VBox alignment="CENTER">
          <HBox alignment="CENTER">
             <children>
-               <Label styleClass="text-primary" text="AD AUCTION DASHBOARD" textAlignment="CENTER" wrapText="true">
+               <Label styleClass="title-text" text="AD AUCTION DASHBOARD" textAlignment="CENTER" wrapText="true">
                   <font>
                      <Font size="40.0" />
                   </font>
@@ -25,7 +25,7 @@
                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
             </VBox.margin>
          </HBox>
-         <Label alignment="CENTER" contentDisplay="CENTER" styleClass="text-primary" text="Please Load your Files">
+         <Label alignment="CENTER" contentDisplay="CENTER" styleClass="title-text" text="Please Load your Files">
             <font>
                <Font size="20.0" />
             </font>
