--- a/src/main/resources/segGroupCW/graphView.fxml
+++ b/src/main/resources/segGroupCW/graphView.fxml
@@ -1,65 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.chart.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXCheckBox?>
+<?import com.jfoenix.controls.JFXRadioButton?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="881.0" prefWidth="938.0" stylesheets="@css/graphView.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="segGroupCW.GraphController">
-      <top>
-         <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="938.0">
-            <children>
-               <Pane prefHeight="100.0" prefWidth="246.0">
-                  <children>
-                     <Label fx:id="mainMetricLabel" layoutX="-80.0" layoutY="15.0" prefHeight="70.0" prefWidth="285.0" styleClass="text-primary" text="No of Impressions">
-                        <font>
-                           <Font name="Verdana" size="24.0" />
-                        </font>
-                     </Label>
-                  </children></Pane>
-               <Pane fx:id="topHBox" prefHeight="100.0" prefWidth="370.0">
-                  <children>
-                  </children>
-               </Pane>
-               <Pane prefHeight="100.0" prefWidth="220.0">
-                  <children>
-                     <JFXButton fx:id="changeCampaignButton" layoutX="72.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToSecondary" prefHeight="25.0" prefWidth="123.0" styleClass="btn-submit" text="Change Campaign" />
-                     <JFXButton buttonType="RAISED" layoutX="72.0" layoutY="50.0" mnemonicParsing="false" onAction="#dashboardReturn" prefHeight="42.0" prefWidth="57.0" text=" ">
-                        <graphic>
-                           <ImageView fx:id="houseImageView" fitHeight="34.0" fitWidth="54.0" pickOnBounds="true" preserveRatio="true">
-                              <image>
-                                 <Image url="@../assets/thin-046_house_home-512.png" />
-                              </image>
-                           </ImageView>
-                        </graphic>
-                     </JFXButton>
-                     <JFXButton fx:id="settingsButton" buttonType="RAISED" layoutX="134.0" layoutY="50.0" mnemonicParsing="false" onAction="#settingsPage" prefHeight="42.0" prefWidth="57.0" text=" ">
-                        <graphic>
-                           <ImageView fx:id="houseImageView1" fitHeight="39.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                              <image>
-                                 <Image url="@/assets/app-22-cog-512.png" />
-                              </image>
-                           </ImageView>
-                        </graphic>
-                     </JFXButton>
-                  </children>
-               </Pane>
-            </children>
-         </HBox>
-      </top>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="881.0" prefWidth="938.0" stylesheets="@css/graphView.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="segGroupCW.GraphController">
 
       <left>
-         <VBox fx:id="testPane" alignment="CENTER" layoutX="-2.0" layoutY="109.0" prefHeight="772.0" prefWidth="176.0" styleClass="checkbox-text">
-            <children>
-               <VBox alignment="TOP_CENTER" prefHeight="718.0" prefWidth="176.0" spacing="20.0">
+               <VBox fx:id="VBoxPane" alignment="TOP_CENTER" prefHeight="779.0" prefWidth="176.0" spacing="15.0">
                   <padding>
                      <Insets left="10.0" right="10.0" top="10.0" />
                   </padding>
                   <children>
-                     <Label styleClass="checkbox-text" text="Filter">
+                     <Label fx:id="filterLabel" styleClass="checkbox-text" text="Filter">
                         <font>
                            <Font size="18.0" />
                         </font>
@@ -98,7 +63,7 @@
                            <Insets left="10.0" top="10.0" />
                         </padding>
                      </VBox>
-                     <VBox prefHeight="236.0" prefWidth="156.0" spacing="10.0">
+                     <VBox prefHeight="208.0" prefWidth="156.0" spacing="10.0">
                         <children>
                            <Label prefHeight="17.0" prefWidth="143.0" text="Context" />
                            <JFXCheckBox fx:id="shoppingCheckbox" text="Shopping" />
@@ -115,15 +80,13 @@
                      <JFXButton fx:id="addFilterButton" buttonType="RAISED" onAction="#addFilterButton" prefHeight="25.0" prefWidth="101.0" styleClass="btn-primary" text="Add Filter" />
                   </children>
                </VBox>
-            </children>
-         </VBox>
       </left>
 
       <center>
-         <VBox alignment="CENTER" fillWidth="false" spacing="50.0">
-            <Pane fx:id="chartPane" layoutX="180.0" layoutY="158.0" styleClass="card-corners">
+         <VBox alignment="TOP_CENTER" fillWidth="false" spacing="10.0">
+            <Pane fx:id="chartPane" layoutX="180.0" layoutY="158.0" prefHeight="438.0" prefWidth="739.0" styleClass="card-corners">
                <children>
-                  <LineChart fx:id="mainChart" layoutX="12.0" layoutY="14.0" prefHeight="371.0" prefWidth="727.0">
+                  <LineChart fx:id="mainChart" layoutX="6.0" layoutY="14.0" prefHeight="431.0" prefWidth="727.0">
                      <xAxis>
                         <CategoryAxis side="BOTTOM" />
                      </xAxis>
@@ -133,11 +96,11 @@
                   </LineChart>
                </children>
             </Pane>
-            <Pane layoutX="180.0" layoutY="609.0" styleClass="card-corners">
+            <Pane fx:id="tgPane" layoutX="180.0" layoutY="609.0" styleClass="card-corners">
                <children>
-                  <HBox alignment="CENTER_LEFT" layoutY="21.0" prefHeight="42.0" prefWidth="746.0" spacing="20.0">
+                  <HBox fx:id="timeHbox" alignment="CENTER_LEFT" layoutY="21.0" prefHeight="42.0" prefWidth="746.0" spacing="20.0">
                      <children>
-                        <Label alignment="CENTER" prefHeight="70.0" prefWidth="147.0" text="Time">
+                        <Label fx:id="timeLabel" alignment="CENTER" prefHeight="70.0" prefWidth="147.0" text="Time">
                            <font>
                               <Font size="26.0" />
                            </font>
@@ -155,9 +118,9 @@
                         <Insets left="10.0" right="10.0" />
                      </padding>
                   </HBox>
-                  <HBox alignment="CENTER_LEFT" layoutY="78.0" prefHeight="46.0" prefWidth="746.0" spacing="20.0">
+                  <HBox fx:id="graphHbox" alignment="CENTER_LEFT" layoutY="78.0" prefHeight="46.0" prefWidth="746.0" spacing="20.0">
                      <children>
-                        <Label alignment="CENTER" prefHeight="46.0" prefWidth="183.0" text="Type of graph">
+                        <Label fx:id="graphLabel" alignment="CENTER" prefHeight="46.0" prefWidth="183.0" text="Type of graph">
                            <font>
                               <Font size="26.0" />
                            </font>
@@ -176,7 +139,37 @@
                   </HBox>
                </children>
             </Pane>
+         <VBox fx:id="filterVbox" prefHeight="200.0" prefWidth="733.0" />
 
          </VBox>
       </center>
+   <top>
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="938.0" styleClass="HBox" BorderPane.alignment="CENTER">
+               <children>
+                  <Pane fx:id="topPane" prefHeight="100.0" prefWidth="172.0">
+                     <children>
+                        <Separator layoutY="96.0" prefHeight="3.0" prefWidth="802.0" />
+                        <JFXButton fx:id="homeButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToSecondary" prefHeight="42.0" prefWidth="57.0" text=" " />
+                  <JFXButton fx:id="backButton" layoutX="79.0" layoutY="14.0" mnemonicParsing="false" onAction="#goHome" prefHeight="42.0" prefWidth="57.0" text=" " />
+                     </children>
+                  </Pane>
+                  <Pane prefHeight="100.0" prefWidth="672.0">
+                     <children>
+                        <Label fx:id="dashBoardLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="269.0" layoutY="7.0" prefHeight="70.0" styleClass="HBox" text="No. of Impressions">
+                           <font>
+                              <Font name="Verdana" size="36.0" />
+                           </font>
+                        </Label>
+                        <Separator layoutX="-2.0" layoutY="96.0" prefHeight="3.0" prefWidth="802.0" />
+                     </children>
+                  </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0">
+               <children>
+                        <JFXButton fx:id="settingsButton" layoutX="94.0" layoutY="14.0" mnemonicParsing="false" onAction="#settingsPage" prefHeight="42.0" prefWidth="57.0" text=" " />
+                  <JFXButton fx:id="printButton" layoutX="26.0" layoutY="21.0" mnemonicParsing="false" onAction="#print" prefHeight="42.0" prefWidth="57.0" text=" " />
+               </children>
+            </Pane>
+               </children>
+            </HBox>
+   </top>
 </BorderPane>
