--- a/src/main/resources/segGroupCW/dashboard.fxml
+++ b/src/main/resources/segGroupCW/dashboard.fxml
@@ -125,7 +125,7 @@
                            <children>
                               <Pane fx:id="pane1" prefHeight="147.0" prefWidth="153.0" styleClass="card">
                                  <children>
-                                    <Label fx:id="noImprTitle" layoutX="14.0" layoutY="14.0" prefHeight="53.0" prefWidth="132.0" text="NO. OF IMPRESSIONS" wrapText="true">
+                                    <Label fx:id="noImprTitle" layoutX="14.0" layoutY="14.0" prefHeight="53.0" prefWidth="132.0" text="IMPRESSIONS" wrapText="true">
                                        <font>
                                           <Font name="Verdana Bold" size="12.0" />
                                        </font>
@@ -139,7 +139,7 @@
                               </Pane>
                               <Pane fx:id="pane2" prefHeight="147.0" prefWidth="153.0" styleClass="card">
                                  <children>
-                                    <Label fx:id="noClicksTitle" layoutX="14.0" layoutY="14.0" prefHeight="53.0" prefWidth="132.0" text="NO. OF CLICKS" wrapText="true">
+                                    <Label fx:id="noClicksTitle" layoutX="14.0" layoutY="14.0" prefHeight="53.0" prefWidth="132.0" text="CLICKS" wrapText="true">
                                        <font>
                                           <Font name="Verdana Bold" size="12.0" />
                                        </font>
@@ -153,7 +153,7 @@
                               </Pane>
                               <Pane fx:id="pane3" prefHeight="147.0" prefWidth="153.0" styleClass="card">
                                  <children>
-                                    <Label fx:id="noUniqueTitle" layoutX="14.0" layoutY="14.0" prefHeight="53.0" prefWidth="132.0" text="NO. OF UNIQUES" wrapText="true">
+                                    <Label fx:id="noUniqueTitle" layoutX="14.0" layoutY="14.0" prefHeight="53.0" prefWidth="132.0" text="UNIQUES" wrapText="true">
                                        <font>
                                           <Font name="Verdana Bold" size="12.0" />
                                        </font>
@@ -167,7 +167,7 @@
                               </Pane>
                               <Pane fx:id="pane4" prefHeight="147.0" prefWidth="153.0" styleClass="card">
                                  <children>
-                                    <Label fx:id="noBounceTitle" layoutX="14.0" layoutY="14.0" prefHeight="53.0" prefWidth="132.0" text="NO. OF BOUNCES" wrapText="true">
+                                    <Label fx:id="noBounceTitle" layoutX="14.0" layoutY="14.0" prefHeight="53.0" prefWidth="132.0" text="BOUNCES" wrapText="true">
                                        <font>
                                           <Font name="Verdana Bold" size="12.0" />
                                        </font>
@@ -183,7 +183,7 @@
                               </Pane>
                               <Pane fx:id="pane5" prefHeight="147.0" prefWidth="153.0" styleClass="card">
                                  <children>
-                                    <Label fx:id="noConversionTitle" layoutX="14.0" layoutY="14.0" prefHeight="53.0" prefWidth="132.0" text="NO. OF CONVERSIONS" wrapText="true">
+                                    <Label fx:id="noConversionTitle" layoutX="14.0" layoutY="14.0" prefHeight="53.0" prefWidth="132.0" text="CONVERSIONS" wrapText="true">
                                        <font>
                                           <Font name="Verdana Bold" size="12.0" />
                                        </font>
@@ -286,7 +286,7 @@
                         </VBox>
                         <VBox layoutX="170.0" layoutY="-3.0" prefWidth="616.0" spacing="20.0">
                            <children>
-                              <Pane fx:id="noImprPane" onMouseClicked="#graphViewImpressions" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
+                              <Pane fx:id="noImprPane" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
                                  <children>
                                     <LineChart fx:id="NoImpressionsChart" createSymbols="false" horizontalGridLinesVisible="false" layoutX="-7.0" prefHeight="147.0" prefWidth="504.0">
                                        <xAxis>
@@ -298,7 +298,7 @@
                                     </LineChart>
                                  </children>
                               </Pane>
-                              <Pane fx:id="noClicksPane" onMouseClicked="#graphViewNoClicks" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
+                              <Pane fx:id="noClicksPane" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
                                  <children>
                                     <LineChart fx:id="noOfClicksChart" createSymbols="false" horizontalGridLinesVisible="false" layoutX="-8.0" layoutY="-1.0" prefHeight="147.0" prefWidth="504.0">
                                        <xAxis>
@@ -310,7 +310,7 @@
                                     </LineChart>
                                  </children>
                               </Pane>
-                              <Pane fx:id="noOfUniques" onMouseClicked="#graphViewNoUniques" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
+                              <Pane fx:id="noOfUniques" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
                                  <children>
                                     <LineChart fx:id="NoUniquesChart" createSymbols="false" horizontalGridLinesVisible="false" layoutX="-12.0" layoutY="-1.0" prefHeight="147.0" prefWidth="504.0">
                                        <xAxis>
@@ -322,7 +322,7 @@
                                     </LineChart>
                                  </children>
                               </Pane>
-                              <Pane fx:id="noBouncePane" onMouseClicked="#graphViewNoBounces" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
+                              <Pane fx:id="noBouncePane" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
                                  <children>
                                     <LineChart fx:id="NoBouncesChart" createSymbols="false" horizontalGridLinesVisible="false" layoutX="-12.0" layoutY="-1.0" prefHeight="147.0" prefWidth="504.0">
                                        <xAxis>
@@ -334,7 +334,7 @@
                                     </LineChart>
                                  </children>
                               </Pane>
-                              <Pane fx:id="noOfConversionsPane" onMouseClicked="#graphViewNoConversions" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
+                              <Pane fx:id="noOfConversionsPane" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
                                  <children>
                                     <LineChart fx:id="NoConversionsChart" createSymbols="false" horizontalGridLinesVisible="false" layoutX="-11.0" layoutY="1.0" prefHeight="147.0" prefWidth="504.0">
                                        <xAxis>
@@ -346,7 +346,7 @@
                                     </LineChart>
                                  </children>
                               </Pane>
-                              <Pane fx:id="totalCostPane" onMouseClicked="#graphViewTotalCost" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
+                              <Pane fx:id="totalCostPane" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
                                  <children>
                                     <LineChart fx:id="totalCostChart" createSymbols="false" horizontalGridLinesVisible="false" layoutX="-7.0" prefHeight="147.0" prefWidth="504.0">
                                        <xAxis>
@@ -358,7 +358,7 @@
                                     </LineChart>
                                  </children>
                               </Pane>
-                              <Pane fx:id="ctrPane" onMouseClicked="#graphViewCTR" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
+                              <Pane fx:id="ctrPane" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
                                  <children>
                                     <LineChart fx:id="ctrChart" createSymbols="false" horizontalGridLinesVisible="false" layoutX="-7.0" prefHeight="147.0" prefWidth="504.0">
                                        <xAxis>
@@ -370,7 +370,7 @@
                                     </LineChart>
                                  </children>
                               </Pane>
-                              <Pane fx:id="cpaPane" onMouseClicked="#graphViewCPA" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
+                              <Pane fx:id="cpaPane" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
                                  <children>
                                     <LineChart fx:id="cpaChart" createSymbols="false" horizontalGridLinesVisible="false" layoutX="-7.0" prefHeight="147.0" prefWidth="504.0">
                                        <xAxis>
@@ -382,7 +382,7 @@
                                     </LineChart>
                                  </children>
                               </Pane>
-                              <Pane fx:id="cpcPane" onMouseClicked="#graphViewCPC" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
+                              <Pane fx:id="cpcPane" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
                                  <children>
                                     <LineChart fx:id="cpcChart" createSymbols="false" horizontalGridLinesVisible="false" layoutX="-7.0" prefHeight="147.0" prefWidth="504.0">
                                        <xAxis>
@@ -394,7 +394,7 @@
                                     </LineChart>
                                  </children>
                               </Pane>
-                              <Pane fx:id="cpmPane" onMouseClicked="#graphViewCPM" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
+                              <Pane fx:id="cpmPane" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
                                  <children>
                                     <LineChart fx:id="cpmChart" createSymbols="false" horizontalGridLinesVisible="false" layoutX="-7.0" prefHeight="147.0" prefWidth="504.0">
                                        <xAxis>
@@ -406,7 +406,7 @@
                                     </LineChart>
                                  </children>
                               </Pane>
-                              <Pane fx:id="bounceRatePane" onMouseClicked="#graphViewBounceRate" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
+                              <Pane fx:id="bounceRatePane" prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
                                  <children>
                                     <LineChart fx:id="bounceRateChart" createSymbols="false" horizontalGridLinesVisible="false" layoutX="-7.0" prefHeight="147.0" prefWidth="504.0">
                                        <xAxis>
